apps/sms/style/sms.css
/* ... */
#messages-container[data-type="list"] .message .bubble > aside {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: auto;

  display: none;
  overflow: hidden;
  width: 5rem;

  text-align: center;
}

#messages-container[data-type="list"] .message.incoming .bubble > aside {
  left: 0;
  right: auto;
  margin: 0 0.5rem 0 0;
}

#messages-container[data-type="list"] .message.error .bubble > aside progress {
  display: none;
}

#messages-container[data-type="list"] .message.error .bubble > aside {
  display: block;

  background: url('images/icons/exclamation.png') no-repeat center center;
  background-size: 2.2rem;
}

#messages-container[data-type="list"] .message button.download {
  padding: 0.5em;
  margin: 0.5em;
  background: #ccc;
  width: 100%;
}

#messages-container[data-type="list"] .message.pending .bubble > aside,
#messages-container[data-type="list"] .message.sending .bubble > aside {
  display: block;
}

#messages-container[data-type="list"] .message.pending .bubble > aside progress,
#messages-container[data-type="list"] .message.sending .bubble > aside progress {
  display: block;
  height: 100%;
  margin: 0 auto;
}

#messages-container[data-type="list"] .message .bubble p {
  text-align: left;
  font-size: 1.9rem;
  line-height: 2.5rem;
  white-space: normal;
  padding: 0;
}

#messages-container[data-type="list"] .message .bubble p a {
  color: #000;
  text-decoration: underline;
}

/*
  Styles for Edit mode in Messages Container
*/

.edit #messages-container[data-type="list"] .message {
  border-color: #e7e7e7;
}

.edit [data-type="list"] .message .bubble {
  pointer-events: none;
}

.edit-button {
  background: -moz-linear-gradient(top, #b50404 0%, #850a0a 100%);
  height: 100%;
  width: 100%;
  -moz-box-sizing: border-box;
  font-weight: 600;
  font-size: 1.6rem;
  color: white;
  opacity: 0.99; /* hackaround for painting bug (bug 821221) */
}

.disabled {
  opacity: 0.3;
  pointer-events: none;
}

/* Add margin at the end of the ul to avoid overlay with edit mode */
.edit ul:last-child {
  margin-bottom: 7rem;
}

/*
  Bottom bar for sending SMS
*/

.messages-compose-form[role="search"] {
  transition: transform .2s ease-in;
  background: white;
}

form.bottom[role="search"].messages-compose-form {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
}

/* Fix the compose buttons to the bottom of their container. */
#messages-attach-button, #messages-send-button {
  float: none;
  position: absolute;
  bottom: 0;
}
#messages-attach-button {
  left: 0;
}
#messages-send-button {
  right: 0;
}

#messages-send-button.active {
  background: #008aaa;
}

#messages-send-button.has-counter:before {
  content: attr(data-counter);
  color: rgb(133, 133, 133);
  border-left: 0.1rem solid rgb(231, 231, 213);
  font-weight: normal;
  font-size: 1.8rem;
  text-align: left;
  position: absolute;
  height: 4.4rem;
  left: 0;
  line-height: 1.8rem;
  top: -5rem;
  padding-top: 0;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

[data-message-type="mms"] #messages-send-button.has-counter:before {
  content: 'MMS';
}

/* TODO: Move this into the shared building block */
#messages-attach-button:before {
  background-image: url(images/paperclip-button.png);
}

#messages-compose-form {
  max-height: 38rem;
}

#messages-compose-form [contentEditable] {
  padding: 0.4rem 7rem 0.2rem 3.5rem;
  line-height: 1.8rem !important;
  min-height: 1.9rem;
  max-height: 37rem;
  /* Cursor hides itself otherwise: */
  overflow: auto;
  text-align: left;
  font-size: 1.8rem;
}
#messages-compose-form .placeholder[contentEditable]:after {
  color: #888;
  position: absolute;
  top: 0.8rem;
  content: attr(placeholder);
  pointer-events: none;
}
#messages-input .attachment {
  border: none;
  width: 10rem;
  height: 10rem;
  display: block;
}

/* these are used in the attachment iframe */
body.attachment {
  margin: 0;
  font-size: 1.5rem;
}
body.attachment img {
  width: 100%;
  height: 100%;
}
body.attachment div {
  position: absolute;
  bottom: 0;
  right: 0;
  padding: 0.4rem 0.4rem 0 0.4rem;
  background: rgba(0,0,0,0.3);
  border: 1px solid rgba(255, 255, 255, 0.3);
  border-radius: 1rem 0 0 0;
  color: #FFF;
}
#send-message-container {
  height: 100%;
  width: 6rem;
  float: right;
}

/*
  Loading screen while deleting
*/

#loading.show-loading {
  display: block;
}

#loading {
  display: none;
}

.loading-header {
  text-align: left;
}

#loading [role="status"] {
  text-align: center;
  height: 4rem;
}

/*
  No result container
*/

#threads-no-messages {
  background-image: url('images/SMS_200x200_bubble.png');
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center;
  background-size: 20rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: -moz-calc(100% - 5rem);
  width: 100%;
}

#no-result-message {
  text-align: left;
  line-height: 3rem;
  position: relative;
  top: 50%;
  border-top: .1rem solid rgba(96,96,96,.5);
  padding: 2rem 0.5rem;
  width: 27rem;
  margin: -8rem auto;
  color: #606060;
  font-weight: 300;
  font-size: 2.2rem;
}

/*
  Fixed headers
*/
.fixed-title {
  position: absolute;
  top: 5rem;
  width: calc(100% - 6rem);
  padding: 1.5rem 1.5rem 0.5rem;
  margin: 0 1.5rem;
  border-bottom: solid 0.1rem #ff4e00;
  background-repeat: no-repeat;
  background-color: #FFFFFF;
  transform: translateY(-3rem);
  pointer-events: none;
  text-align: left;
  text-transform: uppercase;
  font-size: 1.6rem;
  font-weight: normal;
  line-height: 1.8rem;
  color: #FF4E00;
  z-index: 4;
}

/*
  Styles related to the new layout of the composer
*/


#messages-to-field {
  display: none;
  text-align: left;
  min-height: 3.5rem;
  overflow: hidden;
  border-bottom: .1rem solid #4d4d4d;
  color: black;
  position: relative;
  margin: 0;
  padding: 0 1.5rem;
  z-index: 10;
  font-size: 1.465rem;
  transition: height 0.2s ease-in-out;
}

section[role="region"].new #messages-to-field {
  display: block;
}
/* ... */

